fix: text-align center added

--- a/src/components/auth/login/login.css
+++ b/src/components/auth/login/login.css
@@ -2,6 +2,7 @@
   width: 50%;
   height: 70vh;
   margin: 0 auto;
+  text-align: center;
   display: flex;
   border-radius: 20px;
   overflow: hidden;
